apps/media/jellyfin/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: downloads
          podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyseerr
